<resources>
    <string name="app_name">Pokedex</string>
    <string name="prefs">KotlinProject.PREFERENCES_FILE_KEY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="hp">HP:</string>
    <string name="attack">Attack:</string>
    <string name="defense">Defense:</string>
    <string name="special_attack">Special Attack:</string>
    <string name="special_defense">Special Defense:</string>
    <string name="speed">Speed:</string>
    <string name="berries">Berries</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out_button">log out button</string>
    <string name="google">Sign with Google</string>
    <string name="or">or</string>
</resources>