<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.DetailsFragment">

    <TextView
        android:id="@+id/tvPokemonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <ImageView
        android:id="@+id/ivPokemon"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="550dp"
        android:layout_marginTop="220dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/detailsBackground"
        app:cardCornerRadius="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPokemonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="POTATO" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                app:dividerColor="@color/text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp">

                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/text"
                    tools:text="POTATO" />


                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/text"
                    tools:text="POTATO" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvTypes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                android:textColor="@color/text"
                tools:text="POTATO" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginHorizontal="16dp"
                android:gravity="bottom"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="4dp"

                    android:layout_weight="1">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:gravity="center|end"
                        android:text="@string/hp"
                        android:textColor="@color/white" />

                    <View
                        android:id="@+id/viewHp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="8dp"
                        android:background="@color/hp_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="2dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"

                        android:gravity="center|end"
                        android:text="@string/attack"
                        android:textColor="@color/white" />

                    <View
                        android:id="@+id/viewAttack"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"

                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="8dp"
                        android:background="@color/attack_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="2dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:gravity="center|end"
                        android:text="@string/defense"
                        android:textColor="@color/white" />

                    <View
                        android:id="@+id/viewDefense"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="8dp"
                        android:background="@color/defense_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="2dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:gravity="center|end"
                        android:text="@string/special_attack"
                        android:textColor="@color/white" />

                    <View
                        android:id="@+id/viewSpecialAttack"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="8dp"
                        android:background="@color/special_attack_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="2dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:gravity="center|end"
                        android:text="@string/special_defense"
                        android:textColor="@color/white" />

                    <View
                        android:id="@+id/viewSpecialDefense"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="8dp"
                        android:background="@color/special_defense_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="2dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:gravity="center|end"
                        android:text="@string/speed"
                        android:textColor="@color/white" />

                    <View
                        android:id="@+id/viewSpeed"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="8dp"
                        android:background="@color/speed" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

<!--    <FrameLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:background="@color/detailsBackground"-->
<!--        app:layout_constraintBottom_toBottomOf="parent" />-->
</androidx.constraintlayout.widget.ConstraintLayout>